# VisionStudio

./: README.md
VisionCore/: CMakeLists.txt  library.cpp  library.h
VisionStudio/: .gitignore  Dockerfile  Kernel.cs  Program.cs  VisionStudio.sln
VisionStudio/Core/: IO.cs  Init.cs  ProjectManager.cs  Projects.cs
VisionStudio/Studio/: Dockerfile  Program.cs  Studio.csproj
VisionStudio/Studio/Visual/: FileExplorer.cs  MultilineTextInput.cs  ProjectExplorer.cs
VisionStudio/Studio/Window/: EditorWindow.cs  MainWindow.cs
example-project/: .gitignore  Makefile  README.md  grub.cfg  manifest.json
example-project/src/boot/: header.asm  main.asm
example-project/src/kernel/: io.h  kernel.c
example-project/src/kernel/string/: string.h
example-project/src/kernel/vga/: vga.h
example-project/src/kernel/vga/text/: terminal.h
